--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -96,7 +96,7 @@
             android:name=".WallActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize"
-            android:launchMode="singleTask" >
+            android:launchMode="singleTop" >
         </activity>
         <activity
             android:name=".extendables.SideBarActivity"
@@ -132,7 +132,7 @@
         </activity>
         <activity
             android:name=".CreateGroupActivity"
-            android:launchMode="singleTask"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
              >
         </activity>
@@ -143,7 +143,7 @@
         <activity
             android:name=".MyProfileActivity"
             android:screenOrientation="portrait"
-            android:launchMode="singleTask" >
+            android:launchMode="singleTop" >
         </activity>
         <activity
             android:name=".UserProfileActivity"
@@ -157,28 +157,28 @@
         </activity>
         <activity
             android:name=".LocationActivity"
-            android:launchMode="singleTask"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".RecordingActivity"
             android:screenOrientation="portrait"
-            android:launchMode="singleTask" >
+            android:launchMode="singleTop" >
         </activity>
         <activity
             android:name=".VoiceActivity"
             android:screenOrientation="portrait"
-            android:launchMode="singleTask" >
+            android:launchMode="singleTop" >
         </activity>
         <activity
             android:name=".SettingsActivity"
             android:screenOrientation="portrait"
-            android:launchMode="singleTask" >
+            android:launchMode="singleTop" >
         </activity>
         <activity
             android:name=".VideoActivity"
             android:screenOrientation="portrait"
-            android:launchMode="singleTask" 
+            android:launchMode="singleTop" 
             android:configChanges="keyboardHidden|orientation|screenSize">
         </activity>
         <activity
@@ -188,7 +188,7 @@
         </activity>
         <activity
             android:name=".RecentActivityActivity"
-            android:launchMode="singleTask"
+            android:launchMode="singleTop"
             android:windowSoftInputMode="stateAlwaysHidden"
             android:screenOrientation="portrait" >
             <intent-filter>
