--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -62,6 +62,9 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyAShU-d_GUo7sBAboP022DisgqUGQKoqm4" />
+        
+        <meta-data android:name="com.google.android.gms.version" android:value="4030500" />
+        
 
         <activity
             android:name=".SplashScreenActivity"
