--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -63,7 +63,7 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyAEjfVThq8_-mHeitjZYanpI_XALIyRSAU" />
         
-        <meta-data android:name="com.google.android.gms.version" android:value="4030500" />
+        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
         
 
         <activity
