--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -157,6 +157,11 @@
             android:launchMode="singleTop" >
         </activity>
         <activity
+            android:name="com.cloverstudio.spika.MembersActivity"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop" >
+        </activity>
+        <activity
             android:name="com.cloverstudio.spika.LocationActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" >
