--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -203,6 +203,12 @@
             android:screenOrientation="portrait"
             android:theme="@style/TransparentDialogTheme" >
         </activity>
+        <activity
+            android:name="com.cloverstudio.spika.ServersListActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" >
+        </activity>
 
         <service android:name="com.cloverstudio.spika.GCMIntentService" />
 
